# openalgo-flow

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  settings.py  symbols.py  workflows.py
backend/app/core/: auth.py  openalgo.py  rate_limit.py
backend/app/models/: settings.py
backend/app/services/: executor.py
docs/tutorial/: README.md  brokers.md  examples.md  getting-started.md  keyboard-shortcuts.md  nodes-reference.md  sharing-strategies.md  variables.md
examples/: combined-premium-monitor.json
frontend/src/: App.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/panels/: ConfigPanel.tsx
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Settings.tsx
frontend/src/stores/: authStore.ts
